# flathead-flows

./: .gitignore  README.md  app.js  chart.js  index.html  pyproject.toml  style.css
data/: skq_min_flow_2025.csv  stations.csv
data/discharge/json/: discharge_series.json  links.json
data/elevation/: elevation2007-03-01_2026-07-06.csv
eda/: download_usgs.ipynb  utils.py
eda/cache/: aiohttp_cache.sqlite
