[project]
name = "flathead-flows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.2",
    "contextily>=1.7.1",
    "dataretrieval>=1.2.0",
    "geopandas>=1.1.4",
    "matplotlib>=3.11.0",
    "polars>=1.42.1",
    "pynhd>=0.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
